Update: Enhanced barcode printing and fixed Stock Audit report totals/valuation

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -530,12 +530,15 @@
                                                         for="wh_delete_item">Can Delete</label></li>
                                             </ul>
                                         </li>
-                                        <li><input type="checkbox" id="wh_stock_audit" class="form-check-input"><label
-                                                class="checkbox-label" for="wh_stock_audit">WH Stock Audit</label>
-                                        </li>
                                         <li><input type="checkbox" id="wh_customer_payment"
                                                 class="form-check-input"><label class="checkbox-label"
                                                 for="wh_customer_payment">WH Customer Payment</label>
+                                        </li>
+                                        <li><input type="checkbox" id="wh_barcode_print" class="form-check-input"><label
+                                                class="checkbox-label" for="wh_barcode_print">Barcode Printing</label>
+                                        </li>
+                                        <li><input type="checkbox" id="wh_stock_audit" class="form-check-input"><label
+                                                class="checkbox-label" for="wh_stock_audit">WH Stock Audit</label>
                                         </li>
                                     </ul>
                                 </li>
